add data analysis and visualization for Titanic dataset in task2 notebook

--- a/task2.ipynb
+++ b/task2.ipynb
@@ -1,16 +1,171 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
-    ""
-   ]
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set the style for better looking plots\n",
+    "plt.style.use('seaborn-v0_8')\n",
+    "sns.set_palette(\"husl\")\n",
+    "plt.rcParams['font.size'] = 12\n",
+    "plt.rcParams['axes.titlesize'] = 16\n",
+    "plt.rcParams['axes.titleweight'] = 'bold'\n",
+    "plt.rcParams['axes.labelsize'] = 12\n",
+    "\n",
+    "# 1.1 Loading data\n",
+    "df = pd.read_csv(\"train.csv\")\n",
+    "print(\"Dataset shape:\", df.shape)\n",
+    "print(\"Column names:\", df.columns.tolist())\n",
+    "df.head()\n",
+    "\n",
+    "# 1.2 Check for missing values and process them\n",
+    "print(\"Missing values in each column:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Handle missing values\n",
+    "df['Возраст'] = df['Возраст'].fillna(df['Возраст'].median())\n",
+    "df = df.drop('Номер каюты', axis=1)\n",
+    "df['Порт отправления'] = df['Порт отправления'].fillna(df['Порт отправления'].mode()[0])\n",
+    "\n",
+    "print(\"\\nAfter handling missing values:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# 2.1 Histogram of passenger age distribution\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(df['Возраст'], bins=30, kde=True)\n",
+    "plt.title('Распределение возраста пассажиров Титаника')\n",
+    "plt.xlabel('Возраст (лет)')\n",
+    "plt.ylabel('Количество пассажиров')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 2.2 Boxplot comparing passenger ages by cabin class\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='класс', y='Возраст', data=df)\n",
+    "plt.title('Сравнение возраста пассажиров по классам кают')\n",
+    "plt.xlabel('Класс каюты')\n",
+    "plt.ylabel('Возраст (лет)')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 2.3 Pie chart to visualize the proportion of survivors and fatalities\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "survival_counts = df['Выжил'].value_counts()\n",
+    "labels = ['Не выжили', 'Выжили']\n",
+    "colors = ['#ff6b6b', '#4ecdc4']\n",
+    "explode = (0.1, 0)  # explode the 1st slice\n",
+    "\n",
+    "plt.pie(survival_counts, labels=labels, colors=colors, autopct='%1.1f%%',\n",
+    "        startangle=90, shadow=True, explode=explode)\n",
+    "plt.title('Соотношение выживших и погибших на Титанике')\n",
+    "plt.axis('equal')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 2.4 Linear graph of the dependence of the number of passengers on age\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Create age bins and count passengers in each bin\n",
+    "age_bins = np.arange(0, df['Возраст'].max() + 5, 5)\n",
+    "age_groups = pd.cut(df['Возраст'], bins=age_bins)\n",
+    "passenger_counts = age_groups.value_counts().sort_index()\n",
+    "\n",
+    "# Create line plot\n",
+    "sns.lineplot(x=age_bins[:-1], y=passenger_counts.values, marker='o',\n",
+    "             linewidth=2.5, markersize=8)\n",
+    "plt.title('Зависимость количества пассажиров от возраста')\n",
+    "plt.xlabel('Возраст (лет)')\n",
+    "plt.ylabel('Количество пассажиров')\n",
+    "plt.xticks(age_bins)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 3.1 Pairplot for multiple numeric columns\n",
+    "numeric_columns = ['Возраст', 'Стоимость проезда пассажира',\n",
+    "                   '# братьев и сестер / супругов на борту',\n",
+    "                   '# родителей/детей на борту']\n",
+    "\n",
+    "print(\"Создание парного графика...\")\n",
+    "pair_grid = sns.pairplot(df[numeric_columns], diag_kind='kde', corner=True,\n",
+    "                         plot_kws={'alpha': 0.6})\n",
+    "pair_grid.fig.suptitle('Парный график числовых переменных Титаника',\n",
+    "                       fontsize=16, fontweight='bold', y=1.02)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# 3.2 Scatterplot with trendline to analyze the relationship between Age and Fare\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.regplot(x='Возраст', y='Стоимость проезда пассажира', data=df,\n",
+    "            scatter_kws={'alpha':0.5}, line_kws={'color':'red', 'linewidth':2})\n",
+    "plt.title('Зависимость стоимости билета от возраста пассажира')\n",
+    "plt.xlabel('Возраст (лет)')\n",
+    "plt.ylabel('Стоимость проезда ($)')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Additional visualization: Survival rate by class and gender\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.barplot(x='класс', y='Выжил', hue='Гендер', data=df, errorbar=None)\n",
+    "plt.title('Уровень выживаемости по классу каюты и полу')\n",
+    "plt.xlabel('Класс каюты')\n",
+    "plt.ylabel('Доля выживших')\n",
+    "plt.legend(title='Пол', loc='upper right')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Correlation heatmap\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "numeric_df = df[['Выжил', 'класс', 'Возраст', '# братьев и сестер / супругов на борту',\n",
+    "                 '# родителей/детей на борту', 'Стоимость проезда пассажира']]\n",
+    "correlation_matrix = numeric_df.corr()\n",
+    "\n",
+    "# Create mask for upper triangle\n",
+    "mask = np.triu(np.ones_like(correlation_matrix, dtype=bool))\n",
+    "\n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', center=0,\n",
+    "            square=True, linewidths=0.5, fmt='.2f', mask=mask,\n",
+    "            cbar_kws={'label': 'Коэффициент корреляции'})\n",
+    "plt.title('Тепловая карта корреляций числовых переменных Титаника')\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Additional: Family size analysis\n",
+    "df['Размер семьи'] = df['# братьев и сестер / супругов на борту'] + df['# родителей/детей на борту']\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.countplot(x='Размер семьи', data=df)\n",
+    "plt.title('Распределение пассажиров по размеру семьи')\n",
+    "plt.xlabel('Размер семьи')\n",
+    "plt.ylabel('Количество пассажиров')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Survival rate by family size\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "family_survival = df.groupby('Размер семьи')['Выжил'].mean().reset_index()\n",
+    "sns.barplot(x='Размер семьи', y='Выжил', data=family_survival, errorbar=None)\n",
+    "plt.title('Уровень выживаемости в зависимости от размера семьи')\n",
+    "plt.xlabel('Размер семьи')\n",
+    "plt.ylabel('Доля выживших')\n",
+    "plt.ylim(0, 1)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "id": "f5f177ffa68f122"
   }
  ],
  "metadata": {
